properties-dialog: Don't set the location as a link
When attempting to read the location row, Orca reads the HTML
`<a>` tags. Also, if the file name has spaces or accentuation,
Orca won't read them in a human-readable way.

To fix this, don't set the location as a link, as there are
already the "Open in File Manager" button if the user whishes
to open the file location. Having both the link and the button
is redundant.

Also, now that the location is no longer a link, make the location
row as a property row and use "subtitle-lines=1" to ellipsize the
location, otherwise the row might become too tall if the location
is long.

--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -34,37 +34,9 @@
                   </object>
                 </child>
                 <child>
-                  <object class="AdwActionRow">
-                    <child type="prefix">
-                      <object class="GtkBox">
-                        <property name="orientation">vertical</property>
-                        <property name="spacing">3</property>
-                        <property name="halign">start</property>
-                        <property name="valign">center</property>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label" translatable="yes">Location</property>
-                            <property name="hexpand">True</property>
-                            <property name="ellipsize">end</property>
-                            <property name="halign">start</property>
-                            <style>
-                              <class name="subtitle"/>
-                            </style>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkLabel" id="location">
-                            <property name="xalign">0</property>
-                            <property name="ellipsize">start</property>
-                            <property name="use-markup">true</property>
-                            <signal name="activate-link" handler="activate_link_cb" swapped="true"/>
-                            <accessibility>
-                              <property name="has-popup">true</property>
-                            </accessibility>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
+                  <object class="AdwActionRow" id="location">
+                    <property name="title" translatable="yes">Location</property>
+                    <property name="subtitle-lines">1</property>
                     <child type="suffix">
                       <object class="GtkButton">
                         <style>
@@ -76,6 +48,9 @@
                         <property name="valign">center</property>
                       </object>
                     </child>
+                    <style>
+                      <class name="property"/>
+                    </style>
                   </object>
                 </child>
               </object>
