--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -3,8 +3,8 @@
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
   <requires lib="GtkSource" version="5.0"/>
-  <template class="EditorPreferencesDialog" parent="AdwPreferencesWindow">
-    <property name="default-height">700</property>
+  <template class="EditorPreferencesDialog" parent="AdwPreferencesDialog">
+    <property name="content-height">700</property>
     <property name="width-request">360</property>
     <property name="height-request">294</property>
     <style>
