--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -34,17 +34,10 @@
           </object>
         </child>
         <property name="content">
-          <object class="GtkScrolledWindow">
-            <property name="max-content-height">400</property>
-            <property name="propagate-natural-height">true</property>
-            <property name="hscrollbar-policy">never</property>
+          <object class="AdwPreferencesPage">
             <child>
-              <object class="AdwClamp">
-                <property name="margin-start">42</property>
-                <property name="margin-end">42</property>
-                <property name="margin-top">12</property>
-                <property name="margin-bottom">42</property>
-                <property name="child">
+              <object class="AdwPreferencesGroup">
+                <child>
                   <object class="GtkListBox" id="list_box">
                     <child type="placeholder">
                       <object class="GtkLabel" id="placeholder">
@@ -60,7 +53,7 @@
                       <class name="content"/>
                     </style>
                   </object>
-                </property>
+                </child>
               </object>
             </child>
           </object>
