--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -34,26 +34,37 @@
           </object>
         </child>
         <property name="content">
-          <object class="AdwPreferencesPage">
+          <object class="GtkStack" id="stack">
             <child>
-              <object class="AdwPreferencesGroup">
-                <child>
-                  <object class="GtkListBox" id="list_box">
-                    <child type="placeholder">
-                      <object class="GtkLabel" id="placeholder">
-                        <property name="label" translatable="yes">No Matches</property>
-                        <property name="visible">false</property>
-                        <style>
-                          <class name="dim-label"/>
-                          <class name="placeholder"/>
-                        </style>
+              <object class="GtkStackPage">
+                <property name="name">document-languages-page</property>
+                <property name="child">
+                  <object class="AdwPreferencesPage">
+                    <child>
+                      <object class="AdwPreferencesGroup">
+                        <child>
+                          <object class="GtkListBox" id="list_box">
+                            <style>
+                              <class name="content"/>
+                            </style>
+                          </object>
+                        </child>
                       </object>
                     </child>
-                    <style>
-                      <class name="content"/>
-                    </style>
                   </object>
-                </child>
+                </property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkStackPage">
+                <property name="name">no-search-results-page</property>
+                <property name="child">
+                  <object class="AdwStatusPage">
+                    <property name="icon-name">edit-find-symbolic</property>
+                    <property name="title" translatable="yes">No Results Found</property>
+                    <property name="description" translatable="yes">Try a different search</property>
+                  </object>
+                </property>
               </object>
             </child>
           </object>
