--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -18,6 +18,8 @@
             <property name="search-mode-enabled">True</property>
             <property name="child">
               <object class="AdwClamp">
+                <property name="margin-start">6</property>
+                <property name="margin-end">6</property>
                 <child>
                   <object class="GtkSearchEntry" id="search_entry">
                     <property name="placeholder-text" translatable="yes">Search document types</property>
