open-popover: port list to GtkListView
Originally we couldn't use GtkListView because its scrolling and sizing
were too unstable. That has improved in recent years so we should finally
finish that transition.

Closes: #713

--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk" version="4.0"/>
-  <template class="EditorSidebarRow" parent="GtkListBoxRow">
+  <template class="EditorSidebarRow" parent="GtkWidget">
     <property name="has-tooltip">true</property>
     <signal name="query-tooltip" handler="query_tooltip_cb"/>
     <child>
