--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -93,23 +93,32 @@
                 <property name="propagate-natural-height">True</property>
                 <property name="vexpand">True</property>
                 <child>
-                  <object class="GtkViewport">
-                    <child>
-                      <object class="GtkListBox" id="list_box">
-                        <signal name="row-activated" handler="on_list_box_row_activated_cb" swapped="true" object="EditorOpenPopover"/>
-                        <property name="activate-on-single-click">True</property>
-                        <property name="selection-mode">none</property>
-                        <child type="placeholder">
-                          <object class="GtkLabel">
-                            <property name="label" translatable="yes">No Results Found</property>
-                            <style>
-                              <class name="placeholder"/>
-                              <class name="dim-label"/>
-                            </style>
-                          </object>
-                        </child>
+                  <object class="GtkListView" id="list_view">
+                    <signal name="activate" handler="on_list_view_activate_cb" swapped="true" object="EditorOpenPopover"/>
+                    <property name="single-click-activate">True</property>
+                    <property name="model">
+                      <object class="GtkNoSelection" id="selection">
                       </object>
-                    </child>
+                    </property>
+                    <property name="factory">
+                      <object class="GtkBuilderListItemFactory">
+                        <property name="bytes"><![CDATA[
+<?xml version="1.0" encoding="UTF-8"?>
+<interface>
+  <template class="GtkListItem">
+    <property name="child">
+      <object class="EditorSidebarRow">
+        <binding name="item">
+          <lookup name="item">GtkListItem</lookup>
+        </binding>
+      </object>
+    </property>
+  </template>
+</interface>
+]]>
+                        </property>
+                      </object>
+                    </property>
                   </object>
                 </child>
               </object>
