--- a/src/style.css
+++ b/src/style.css
@@ -63,22 +63,19 @@ window.org-gnome-TextEditor checkbutton.theme-selector radio:checked {
 window.org-gnome-TextEditor .open-popover contents {
   padding: 0;
 }
-window.org-gnome-TextEditor .open-popover list {
+window.org-gnome-TextEditor .open-popover listview {
   margin-bottom: 3px;
   background: none;
   color: inherit;
 }
-window.org-gnome-TextEditor .open-popover list label.placeholder {
-  min-height: 57px;
-}
-window.org-gnome-TextEditor .open-popover list row {
+window.org-gnome-TextEditor .open-popover listview row {
   border-radius: 6px;
   margin: 3px 6px;
 }
-window.org-gnome-TextEditor .open-popover list row:first-child {
+window.org-gnome-TextEditor .open-popover listview row:first-child {
   margin-top: 6px;
 }
-window.org-gnome-TextEditor .open-popover list row button {
+window.org-gnome-TextEditor .open-popover listview row button {
   padding: 3px;
   margin: 0;
   min-height: 24px;
