--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -124,36 +124,26 @@
               </object>
             </child>
             <child>
-              <object class="AdwExpanderRow">
+              <object class="AdwSwitchRow" id="restore_session">
                 <property name="title" translatable="yes">_Restore Session</property>
                 <property name="use-underline">true</property>
                 <property name="subtitle" translatable="yes">Return to your previous session when Text Editor is started</property>
-                <property name="expanded" bind-source="restore_session" bind-property="active" bind-flags="sync-create|bidirectional"/>
-                <child type="action">
-                  <object class="GtkSwitch" id="restore_session">
-                    <property name="halign">end</property>
-                    <property name="valign">center</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="AdwPreferencesRow" id="clear_history_row">
-                    <child type="suffix">
-                      <object class="GtkButton">
-                        <property name="action-name">app.clear-history</property>
-                        <property name="focus-on-click">false</property>
-                        <property name="halign">end</property>
-                        <property name="label" translatable="yes">_Clear History</property>
-                        <property name="margin-top">6</property>
-                        <property name="margin-end">6</property>
-                        <property name="margin-bottom">6</property>
-                        <property name="use-underline">true</property>
-                        <style>
-                          <class name="destructive-action"/>
-                        </style>
-                      </object>
-                    </child>
-                  </object>
-                </child>
+                <property name="active" bind-source="clear_history_group" bind-property="sensitive" bind-flags="sync-create|bidirectional"/>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="AdwPreferencesGroup" id="clear_history_group">
+            <child>
+              <object class="AdwButtonRow">
+                <property name="action-name">app.clear-history</property>
+                <property name="focus-on-click">False</property>
+                <property name="title" translatable="yes">_Clear History</property>
+                <property name="use-underline">True</property>
+                <style>
+                  <class name="destructive-action"/>
+                </style>
               </object>
             </child>
           </object>
