editor-properties-dialog: Set use-markup=False in the "Location" row
If the file path has an ampersand, the path won't be
displayed. Set use-markup=False to fix that.

Closes https://gitlab.gnome.org/GNOME/gnome-text-editor/-/issues/732

--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -32,6 +32,7 @@
                   <object class="AdwActionRow" id="location">
                     <property name="title" translatable="yes">Location</property>
                     <property name="subtitle-lines">1</property>
+                    <property name="use-markup">False</property>
                     <child type="suffix">
                       <object class="GtkButton">
                         <style>
