--- a/src/editor-properties-dialog.ui
+++ b/src/editor-properties-dialog.ui
@@ -23,6 +23,7 @@
                 <child>
                   <object class="AdwActionRow" id="name">
                     <property name="title" translatable="yes">Name</property>
+                    <property name="use-markup">False</property>
                     <style>
                       <class name="property"/>
                     </style>
@@ -31,6 +32,7 @@
                 <child>
                   <object class="AdwActionRow" id="location">
                     <property name="title" translatable="yes">Location</property>
+                    <property name="use-markup">False</property>
                     <property name="subtitle-lines">1</property>
                     <child type="suffix">
                       <object class="GtkButton">
