page: implement cursor position overlay design
There will probably be a bit of fallout to handle from this like moving
stuff around based on cursor position, but this gets the basic mechanics
in place so we can do testing sooner.

Related: #752

--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -139,6 +139,13 @@
                 </layout>
               </object>
             </child>
+            <child type="overlay">
+              <object class="EditorPositionLabel" id="position_label">
+                <property name="visible">false</property>
+                <property name="halign">end</property>
+                <property name="valign">end</property>
+              </object>
+            </child>
           </object>
         </child>
       </object>
