--- a/src/style.css
+++ b/src/style.css
@@ -151,3 +151,10 @@ window.org-gnome-TextEditor.language-dialog label.placeholder {
   padding-left: 2px;
   padding-right: 2px;
 }
+
+page positionlabel {
+  border-radius: 99px;
+  background: var(--popover-bg-color);
+  padding: 6px 18px;
+  margin: 12px 18px;
+}
