position-label: tweak styling

--- a/src/editor-position-label.ui
+++ b/src/editor-position-label.ui
@@ -15,17 +15,14 @@
             <property name="label" translatable="yes">Ln</property>
             <property name="margin-end">3</property>
             <property name="visible">true</property>
-            <attributes>
-              <attribute name="scale" value="0.8222"/>
-            </attributes>
           </object>
         </child>
         <child>
           <object class="GtkLabel" id="line">
             <property name="visible">true</property>
-            <property name="width-chars">2</property>
+            <property name="width-chars">3</property>
             <attributes>
-              <attribute name="scale" value="0.8222"/>
+              <attribute name="font-features" value="'tnum'"/>
             </attributes>
           </object>
         </child>
@@ -35,17 +32,14 @@
             <property name="label" translatable="yes">Col</property>
             <property name="margin-end">3</property>
             <property name="visible">true</property>
-            <attributes>
-              <attribute name="scale" value="0.8222"/>
-            </attributes>
           </object>
         </child>
         <child>
           <object class="GtkLabel" id="column">
             <property name="visible">true</property>
-            <property name="width-chars">2</property>
+            <property name="width-chars">3</property>
             <attributes>
-              <attribute name="scale" value="0.8222"/>
+              <attribute name="font-features" value="'tnum'"/>
             </attributes>
           </object>
         </child>
