--- a/src/style.css
+++ b/src/style.css
@@ -153,8 +153,8 @@ window.org-gnome-TextEditor.language-dialog label.placeholder {
 }
 
 page positionlabel {
-  border-radius: 99px;
+  border-radius: 8px;
   background: var(--popover-bg-color);
-  padding: 6px 18px;
-  margin: 12px 18px;
+  padding: 3px 12px;
+  margin: 4px;
 }
