--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -78,6 +78,13 @@
         <child>
           <object class="AdwPreferencesGroup">
             <child>
+              <object class="EditorPreferencesSwitch" id="display_line_numbers">
+                <property name="title" translatable="yes">Display _Line Numbers</property>
+                <property name="use-underline">true</property>
+                <property name="schema-key">show-line-numbers</property>
+              </object>
+            </child>
+            <child>
               <object class="EditorPreferencesSwitch" id="highlight_current_line">
                 <property name="title" translatable="yes">_Highlight Current Line</property>
                 <property name="use-underline">true</property>
