--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -102,6 +102,17 @@
         </child>
         <child>
           <object class="AdwPreferencesGroup">
+            <child>
+              <object class="EditorPreferencesSwitch">
+                <property name="title" translatable="yes">Check _Spelling</property>
+                <property name="use-underline">true</property>
+                <property name="schema-key">spellcheck</property>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="AdwPreferencesGroup">
             <property name="title" translatable="yes">Right Margin</property>
             <child>
               <object class="EditorPreferencesSpin" id="right_margin">
