--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -113,7 +113,14 @@
         </child>
         <child>
           <object class="AdwPreferencesGroup">
-            <property name="title" translatable="yes">Right Margin</property>
+            <property name="title" translatable="yes">Line Wrap</property>
+            <child>
+              <object class="EditorPreferencesSwitch">
+                <property name="title" translatable="yes">Show _Right Margin</property>
+                <property name="use-underline">true</property>
+                <property name="schema-key">show-right-margin</property>
+              </object>
+            </child>
             <child>
               <object class="EditorPreferencesSpin" id="right_margin">
                 <property name="title" translatable="yes">_Margin Position</property>
