--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -128,6 +128,13 @@
                 <property name="schema-key">right-margin-position</property>
               </object>
             </child>
+            <child>
+              <object class="EditorPreferencesSwitch">
+                <property name="title" translatable="yes">Wrap Lines Automatically</property>
+                <property name="use-underline">true</property>
+                <property name="schema-key">wrap-text</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
