--- a/src/style.css
+++ b/src/style.css
@@ -154,7 +154,12 @@ window.org-gnome-TextEditor.language-dialog label.placeholder {
 
 page positionlabel {
   border-radius: 8px;
-  background: var(--popover-bg-color);
   padding: 3px 12px;
   margin: 4px;
+  background-color: var(--view-bg-color);
+  box-shadow: inset 0 100px 0 0 color-mix(in srgb, currentColor 10%, transparent);
+}
+
+page positionlabel:backdrop {
+  opacity: 0.7;
 }
