--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -37,12 +37,25 @@
                 <property name="child">
                   <object class="AdwPreferencesPage">
                     <child>
-                      <object class="AdwPreferencesGroup">
+                      <object class="AdwPreferencesGroup" id="recent_group">
+                        <child>
+                          <object class="GtkListBox" id="recent_list_box">
+                            <style>
+                              <class name="content"/>
+                            </style>
+                            <property name="selection-mode">none</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwPreferencesGroup" id="group">
                         <child>
                           <object class="GtkListBox" id="list_box">
                             <style>
                               <class name="content"/>
                             </style>
+                            <property name="selection-mode">none</property>
                           </object>
                         </child>
                       </object>
