--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -349,6 +349,12 @@
                 <property name="title" translatable="yes" context="shortcut window">Show help</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="accelerator">&lt;Alt&gt;w</property>
+                <property name="title" translatable="yes" context="shortcut window">Toggle text wrapping</property>
+              </object>
+            </child>
           </object>
         </child>
       </object>
