editor-properties-panel: Don't use GtkWidget:width-request
Using GtkWidget:width-request in EditorPropertiesPanel
causes size allocation warnings when opening Text
Editor.

Use the AdwOverlaySplitView:min-sidebar-width property
in EditorWindow instead.

Closes https://gitlab.gnome.org/GNOME/gnome-text-editor/-/issues/756

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -217,6 +217,7 @@
                   <object class="AdwOverlaySplitView" id="split_view">
                     <property name="sidebar-position">end</property>
                     <property name="show-sidebar">false</property>
+                    <property name="min-sidebar-width">350</property>
                     <property name="content">
                       <object class="AdwLayoutSlot">
                         <property name="id">content</property>
