editor-window: Fix zoom buttons UI issues
When zooming in/out, the main menu width keeps changing.
Also, the "Reset Zoom" has a disproportional height
compared to the zoom in/out buttons height.

To fix this, remove valign=center from all zoom buttons
and remove the padding from the "Reset Zoom" button
with CSS. It's the same approach that Ptyxis
uses with its zoom buttons.

Closes https://gitlab.gnome.org/GNOME/gnome-text-editor/-/issues/759

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@ dialog.preferences preferencesgroup flowboxchild GtkSourceStyleSchemePreview:not
               0 2px 6px 2px alpha(black, .03);
 }
 
+popover button.pill.flat {
+  padding: 0;
+}
+
 /* EditorThemeSelector */
 window.org-gnome-TextEditor themeselector {
   margin: 9px;
