editor-window: Set F9 as the kbd shortcut to open EditorPropertiesPanel

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -133,6 +133,17 @@
                     <accessibility>
                       <property name="label" translatable="yes">Document Properties</property>
                     </accessibility>
+                    <child>
+                      <object class="GtkShortcutController">
+                        <property name="scope">managed</property>
+                        <child>
+                          <object class="GtkShortcut">
+                            <property name="trigger">F9</property>
+                            <property name="action">activate</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <child>
