--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -122,6 +122,12 @@
                 <property name="accelerator">&lt;control&gt;w</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Open document properties</property>
+                <property name="accelerator">F9</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
