properties-panel: track can-open property for action enabled state
Fixes: #761

--- a/src/editor-properties-panel.ui
+++ b/src/editor-properties-panel.ui
@@ -206,6 +206,7 @@
     </child>
   </template>
   <object class="EditorProperties" id="properties">
+    <signal name="notify::can-open" handler="editor_properties_panel_notify_can_open_cb" swapped="true"/>
     <binding name="page">
       <lookup name="page">EditorPropertiesPanel</lookup>
     </binding>
