editor-preferences-dialog: Add mnemonic to the "Wrap Lines Automatically" option

--- a/src/editor-preferences-dialog.ui
+++ b/src/editor-preferences-dialog.ui
@@ -137,7 +137,7 @@
             </child>
             <child>
               <object class="EditorPreferencesSwitch">
-                <property name="title" translatable="yes">Wrap Lines Automatically (Alt+W)</property>
+                <property name="title" translatable="yes">_Wrap Lines Automatically (Alt+W)</property>
                 <property name="use-underline">true</property>
                 <property name="schema-key">wrap-text</property>
               </object>
