--- a/src/style.css
+++ b/src/style.css
@@ -145,10 +145,13 @@ box.statusbar {
 }
 
 
-window.org-gnome-TextEditor.language-dialog row:last-child {
+.language-dialog row {
+  padding: 0;
+}
+.language-dialog row:last-child {
   border-bottom: 1px solid transparent;
 }
-window.org-gnome-TextEditor.language-dialog label.placeholder {
+.language-dialog label.placeholder {
   min-height: 55px; /* 50px min-height + 2 padding top/bottom + 1 border */
   margin-left: 12px;
   margin-right: 12px;
