icons: rename open-dialog-symbolic and use consistently
Related: !207
Related: #762

--- a/src/editor-properties-panel.ui
+++ b/src/editor-properties-panel.ui
@@ -61,7 +61,7 @@
                       <class name="flat"/>
                     </style>
                     <property name="action-name">page.change-language</property>
-                    <property name="icon-name">external-link-symbolic</property>
+                    <property name="icon-name">open-dialog-symbolic</property>
                     <property name="tooltip-text" translatable="yes">Change Document Type</property>
                     <property name="valign">center</property>
                   </object>
