properties-panel: set activatable-widget for button rows
Related: #762

--- a/src/editor-properties-panel.ui
+++ b/src/editor-properties-panel.ui
@@ -23,6 +23,7 @@
             <child>
               <object class="AdwActionRow" id="location">
                 <property name="title" translatable="yes">Location</property>
+                <property name="activatable-widget">open_button</property>
                 <binding name="subtitle">
                   <lookup name="directory">properties</lookup>
                 </binding>
@@ -32,7 +33,7 @@
                 <property name="use-markup">False</property>
                 <property name="subtitle-lines">1</property>
                 <child type="suffix">
-                  <object class="GtkButton">
+                  <object class="GtkButton" id="open_button">
                     <style>
                       <class name="flat"/>
                     </style>
@@ -51,12 +52,13 @@
               <object class="AdwActionRow">
                 <property name="title" translatable="yes">_Document Type</property>
                 <property name="use-underline">True</property>
+                <property name="activatable-widget">type_button</property>
                 <binding name="subtitle">
                   <lookup name="language-name">properties</lookup>
                 </binding>
                 <property name="use-markup">False</property>
                 <child type="suffix">
-                  <object class="GtkButton">
+                  <object class="GtkButton" id="type_button">
                     <style>
                       <class name="flat"/>
                     </style>
