properties-panel: Use Title Case
Related: #762

--- a/src/editor-properties-panel.ui
+++ b/src/editor-properties-panel.ui
@@ -123,7 +123,7 @@
             </child>
             <child>
               <object class="AdwSpinRow" id="tab_width">
-                <property name="title" translatable="yes">Spaces per _tab</property>
+                <property name="title" translatable="yes">Spaces Per _Tab</property>
                 <property name="use-underline">True</property>
                 <property name="climb-rate">1</property>
                 <property name="digits">0</property>
@@ -135,7 +135,7 @@
             </child>
             <child>
               <object class="AdwSpinRow" id="spaces_per_indent_row">
-                <property name="title" translatable="yes">Spaces per _indent</property>
+                <property name="title" translatable="yes">Spaces Per _Indent</property>
                 <property name="use-underline">True</property>
                 <property name="climb-rate">1</property>
                 <property name="digits">0</property>
