--- a/src/editor-search-bar.ui
+++ b/src/editor-search-bar.ui
@@ -50,6 +50,7 @@
                 <property name="action-target">false</property>
                 <property name="tooltip-text" translatable="yes">Previous Match</property>
                 <property name="icon-name">go-up-symbolic</property>
+                <property name="focus-on-click">false</property>
                 <style>
                   <class name="flat"/>
                 </style>
@@ -62,6 +63,7 @@
                 <property name="action-target">false</property>
                 <property name="tooltip-text" translatable="yes">Next Match</property>
                 <property name="icon-name">go-down-symbolic</property>
+                <property name="focus-on-click">false</property>
                 <style>
                   <class name="flat"/>
                 </style>
@@ -77,6 +79,7 @@
           <object class="GtkToggleButton" id="replace_mode_button">
             <property name="tooltip-text" translatable="yes">Search &amp; Replace</property>
             <property name="icon-name">edit-find-replace-symbolic</property>
+            <property name="focus-on-click">false</property>
             <layout>
               <property name="row">0</property>
               <property name="column">2</property>
@@ -90,6 +93,7 @@
           <object class="GtkToggleButton" id="options_button">
             <property name="tooltip-text" translatable="yes">Search Options</property>
             <property name="icon-name">emblem-system-symbolic</property>
+            <property name="focus-on-click">false</property>
             <layout>
               <property name="row">0</property>
               <property name="column">3</property>
@@ -107,6 +111,7 @@
             <property name="valign">center</property>
             <property name="tooltip-text" translatable="yes">Close Search</property>
             <property name="icon-name">window-close-symbolic</property>
+            <property name="focus-on-click">false</property>
             <style>
               <class name="flat"/>
               <class name="small-button"/>
@@ -124,6 +129,7 @@
             <property name="use-underline">true</property>
             <property name="label" translatable="yes">_Replace</property>
             <property name="visible">false</property>
+            <property name="focus-on-click">false</property>
             <layout>
               <property name="row">1</property>
               <property name="column">1</property>
@@ -136,6 +142,7 @@
             <property name="use-underline">true</property>
             <property name="label" translatable="yes">Replace _All</property>
             <property name="visible">false</property>
+            <property name="focus-on-click">false</property>
             <layout>
               <property name="row">1</property>
               <property name="column">2</property>
@@ -152,18 +159,21 @@
               <object class="GtkCheckButton" id="regex_button">
                 <property name="label" translatable="yes">Re_gular expressions</property>
                 <property name="use-underline">true</property>
+                <property name="focus-on-click">false</property>
               </object>
             </child>
             <child>
               <object class="GtkCheckButton" id="case_button">
                 <property name="label" translatable="yes">_Case sensitive</property>
                 <property name="use-underline">true</property>
+                <property name="focus-on-click">false</property>
               </object>
             </child>
             <child>
               <object class="GtkCheckButton" id="word_button">
                 <property name="label" translatable="yes">Match whole _word only</property>
                 <property name="use-underline">true</property>
+                <property name="focus-on-click">false</property>
               </object>
             </child>
             <layout>
